# Flux-aws_data_pipeline

./: README.md  ec2-deploy-recipe.txt  pyproject.toml
build-cvat-ec2-webserver/: docker-compose.override.yml  docker-compose.yml  main.py  pyes_onion_640_yolov5n.pt
build-cvat-nuclio-yolo-ec2/: build.py
build-cvat-nuclio-yolo-ec2/nuclio_script_templates/: docker-compose.serverless-template.yml  function_template.yaml  main_template.py
ec2/: stage_annotation_job.py
lambda_funcs/deprecated/sync-s3-csv/: lambda_function.py
lambda_funcs/sync-s3-rds/: Dockerfile  IAM_role_lambda.json  aws_container_build_and_push.py  docker_build_and_push_ECR_instructions.txt  lambda_function.py  requirements.txt
